# rsomics-insertion-profile

./: Cargo.toml  README.md
.github/workflows/: ci.yml
benches/: bench.rs  insertion_profile.rs
src/: cli.rs  lib.rs
tests/: compat.rs
tests/golden/: ins.bam  ins.bam.bai
